// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle shold render the component with the name of the product 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Sin imagen
  </span>
</div>
`;

exports[`ProductTitle should render the component with the custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
